--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,13 @@ data/img_data filter=lfs diff=lfs merge=lfs -text
 data/test_data_easy_bow.csv filter=lfs diff=lfs merge=lfs -text
 data/test_data_hard_bow.csv filter=lfs diff=lfs merge=lfs -text
 data/text_data filter=lfs diff=lfs merge=lfs -text
+data/text_data/Hard/IR_test_hard.json filter=lfs diff=lfs merge=lfs -text
+data/text_data/Hard/IR_train_hard.json filter=lfs diff=lfs merge=lfs -text
+data/text_data/sample_hard.json filter=lfs diff=lfs merge=lfs -text
+data/text_data/Hard/IR_val_hard.json filter=lfs diff=lfs merge=lfs -text
+data/text_data/sample_easy.json filter=lfs diff=lfs merge=lfs -text
+data/img_data/IR_img_features2id.json filter=lfs diff=lfs merge=lfs -text
+data/text_data/Easy/IR_test_easy.json filter=lfs diff=lfs merge=lfs -text
+data/text_data/Easy/IR_train_easy.json filter=lfs diff=lfs merge=lfs -text
+data/text_data/Easy/IR_val_easy.json filter=lfs diff=lfs merge=lfs -text
+data/img_data/IR_image_features.h5 filter=lfs diff=lfs merge=lfs -text
